apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__array.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 743
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
                publicReviews {
                    body
                    author {
                        name
                    }
                }
            }
        }
        
filtered:
{
  topProducts {
    type
    publicReviews {
      body
    }
  }
}

paths: ["/topProducts/publicReviews/@/author"]
