apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__authenticated_request.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 1530
expression: response
---
{
  "data": {
    "orga": {
      "id": 1,
      "creatorUser": {
        "id": 0,
        "name": "Ada",
        "phone": "1234"
      }
    }
  }
}
