apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__defer.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 844
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type

                ...@defer {
                    nonNullId
                }
            }
        }
        
filtered:
{
  topProducts {
    type
  }
}

paths: ["/topProducts/... on /nonNullId"]
