apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__interface_field-2.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 1050
expression: "TestResult { query: QUERY2, result: doc, paths }"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                    other
                }

                ... on B {
                    id
                    other
                }
            }
        }
        
filtered:
{
  test
  itf {
    ... on A {
      id
      other
    }
    ... on B {
      other
    }
  }
}

paths: ["/itf/... on B/id"]
