apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__interface_field.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 1025
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            test
            itf {
                id
                other
            }
        }
        
filtered:
{
  test
  itf {
    other
  }
}

paths: ["/itf/id"]
