apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__interface_fragment.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 795
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
            }
            itf {
                id
                ...F
            }
        }

        fragment F on User {
            name
        }
        
filtered:
{
  topProducts {
    type
  }
  itf {
    id
  }
}

paths: ["/itf"]
