apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__interface_inline_fragment.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 768
expression: "TestResult { query: QUERY, result: doc, paths }"
---
query:

        query {
            topProducts {
                type
            }
            itf {
                id
                ... on User {
                    name
                }
            }
        }
        
filtered:
{
  topProducts {
    type
  }
  itf {
    id
  }
}

paths: ["/itf/... on User"]
