apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__interface_type-2.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 957
expression: "TestResult { query: QUERY2, result: doc, paths }"
---
query:

        query {
            test
            itf {
                ... on A {
                    id
                }

                ... on B {
                    id
                }
            }
        }
        
filtered:
{
  test
  itf {
    ... on A {
      id
    }
  }
}

paths: ["/itf/... on B"]
