apollo-router/src/plugins/authorization/snapshots/uhg_custom_appollo_roouter__plugins__authorization__authenticated__tests__interface_typename-2.snap
---
source: apollo-router/src/plugins/authorization/authenticated.rs
assertion_line: 1384
expression: "TestResult { query: QUERY2, result: doc, paths }"
---
query:

        query Anonymous {
            post(id: "1") {
              __typename
              ... on PublicBlog {
                __typename
                title
              }
            }
          }
        
filtered:
query Anonymous {
  post(id: "1") {
    __typename
    ... on PublicBlog {
      __typename
      title
    }
  }
}

paths: []
